<resources>
    <string name="app_name">parking_Manager_kt</string>
    <string name="net">Something Went Wrong\n Please Check Your Network &amp;</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="none_paired">No devices have been paired</string>
    <string name="scanning">scanning for devices...</string>
    <string name="select_device">select a device to connect</string>
    <string name="none_found">No devices found</string>

    <string name="error_no_text">There\'s NoText</string>
    <string name="paired_devise">Paired Devices</string>
    <string name="other_available_device">Other Available Devices</string>
    <string name="btn_scan">Scan</string>
    <string name="email">Enter Your Email</string>
    <string name="btn_send">Send</string>
    <string name="welcome">Welcome</string>
    <string name="spt">Spotiz SA</string>
    <string name="prepaid">Prepaid\nUsers</string>
    <string name="vip">VIP\nPass</string>
    <string name="collection">Today \n Collection</string>
    <string name="total_entry">Total Parking \n Entry</string>
    <string name="parking_status">Parking Status</string>
    <string name="occupied">Occupied: </string>
    <string name="available">Available: </string>
    <string name="scan_exit">Scan &amp; Exit</string>
    <string name="scan_entry">Scan &amp; Entry</string>
    <string name="login">Login</string>
    <string name="desc">Login to start allocating parking space and \nmanage available spaces in your parking hub.</string>
    <string name="email_mobile">Email / Mobile Number</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="btn_submit">Submit</string>
    <string name="back">Back</string>
    <string name="vehicle_no">Vehicle No</string>
    <string name="pass_no">Pass No : </string>
    <string name="vehicle_type">Vehicle Type : </string>
    <string name="available_slot">Available \nSlot</string>
    <string name="prepaid_card">Prepaid Card</string>
    <string name="vip_pass">VIP Pass</string>
    <string name="normal_customer">Normal</string>
    <string name="payment_method">Choose a payment method :</string>
    <string name="cash">Cash</string>
    <string name="upi">UPI / Online </string>
    <string name="print">Print &amp; Go</string>
    <string name="time">Time For Vehicle : </string>
    <string name="arriving_time">ARRIVING TIME</string>
    <string name="arriving_time_display">Today at 12 pm</string>
    <string name="leaving_time">LEAVING TIME</string>
    <string name="leaving_time_display">Today at 9 pm</string>
    <string name="refund">Refundable\nAmount</string>
    <string name="refund_amount">0.00 RS</string>
    <string name="checkout">Checkout</string>
    <string name="scan_prepaid_card">Scan Prepaid Card</string>
    <string name="error_no_connection">No Connection</string>
    <string name="try_again">Try Again</string>
    <string name="two_wheeler">Two Wheeler</string>
    <string name="connect">connect</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <string name="setting">SETTINGS</string>
    <string name="rate_us">Rate Us</string>
    <string name="privacy">Privacy</string>
    <string name="info">Information</string>
    <string name="english">English</string>

    <string name="printer_setting">Printer Setting</string>
    <string name="printer_setting_desc">Setup your printer for the parking ticket</string>
    <string name="language">Language</string>
    <string name="language_desc">Select your preferred language</string>
    <string name="change_password">Change Password</string>
    <string name="change_password_desc">Update your password</string>
    <string name="support">Support</string>
    <string name="support_desc">Request for support if having any issue</string>
    <string name="legal">Legal</string>
    <string name="legal_desc">privacy Policy and Terms &amp; Conditions</string>
    <string name="visit_website">Visit a website</string>
    <string name="visit_website_desc">Click below link to visit a website</string>
    <string name="logout">Logout</string>
    <string name="logout_desc">Logout from app</string>

    <string name="available_printer">Available Printers</string>
    <string name="printer_list">Printer setting / List will show here</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>

    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>

    <string name="select_language">Select language which is you want to change</string>
    <string name="form_support">Fill below form and send us a message we will reply you soon as </string>
    <string name="subject">Subject</string>
    <string name="message">Message</string>


    <string name="error_no_google_play">Error! Could\'t find Google Play on this device.</string>
    <string name="rating_dialog_cancel">Cancel</string>
    <string name="rating_dialog_experience">How was your experience with us?</string>
    <string name="rating_dialog_feedback_title">Feedback</string>
    <string name="rating_dialog_maybe_later">Submit</string>
    <string name="rating_dialog_never">Never</string>
    <string name="rating_dialog_submit">Submit</string>
    <string name="rating_dialog_suggestions">Suggest us what went wrong and we\'ll work on it!</string>
    <string name="submit_feedback">Feedback</string>
    <string name="change">Change</string>
    <string name="Nodevice">No Device Connected</string>

    <string name="spotiz_parking"><b>!!Spotiz-Parking!!</b></string>



    <string-array name="Languages">
        <item>English</item>
        <item>French</item>
    </string-array>

</resources>