<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:background="@color/colorPrimaryDark"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

   <!-- <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:lottie_rawRes="@raw/loading2" />-->

    <com.airbnb.lottie.LottieAnimationView
        android:id="@+id/animation"
        android:layout_marginTop="20dp"
        android:layout_centerHorizontal="true"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        app:lottie_rawRes="@raw/nointernet"/>

    <TextView
        android:id="@+id/oops"
        android:layout_marginTop="5dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/animation"
        android:textColor="#FFFFFF"
        android:gravity="center"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="@string/error_no_connection"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:layout_marginTop="5dp"
        android:layout_below="@id/oops"
        android:id="@+id/notes"
        android:gravity="center"
        android:textColor="#fff"
        android:layout_centerHorizontal="true"
        android:text="@string/net"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

    <Button
        android:id="@+id/done"
        android:textColor="#02786c"
        android:layout_below="@+id/notes"
        android:text="@string/try_again"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10sp"
        android:layout_marginTop="10sp"
        android:backgroundTint="#fff"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

</RelativeLayout>