<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/back_support"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">




            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                android:text="@string/change_password"
                android:textColor="@color/black"
                android:textSize="28sp"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/iv_close_password"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_marginTop="12dp"
                android:src="@drawable/closearrow"
                app:layout_constraintDimensionRatio="1.8"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <!--  <TextView
                  android:id="@+id/textView12"
                  android:layout_width="wrap_content"
                  android:layout_height="wrap_content"
                  android:layout_marginTop="50dp"
                  android:text="Current Password"
                  android:textColor="@color/black"
                  android:textSize="16sp"
                  app:layout_constraintStart_toStartOf="@+id/textView8"
                  app:layout_constraintTop_toBottomOf="@+id/textView8" />

              <EditText
                  android:id="@+id/et_subject"
                  android:layout_width="0dp"
                  android:layout_height="wrap_content"
                  android:inputType="textPersonName"
                  android:layout_marginHorizontal="32dp"
                  app:layout_constraintEnd_toEndOf="parent"
                  app:layout_constraintStart_toStartOf="parent"
                  app:layout_constraintTop_toBottomOf="@+id/textView12" />-->

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/current_passwordContainer"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="32dp"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView8"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_current_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:hint="@string/current_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/new_passwordContainer"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="@id/current_passwordContainer"
                app:layout_constraintStart_toStartOf="@+id/current_passwordContainer"
                app:layout_constraintTop_toBottomOf="@+id/current_passwordContainer"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_new_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:hint="@string/new_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/conform_passwordContainer"
                style="@style/TextInputLayoutStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                app:helperTextTextColor="@android:color/holo_red_dark"
                app:layout_constraintEnd_toEndOf="@+id/new_passwordContainer"
                app:layout_constraintStart_toStartOf="@+id/new_passwordContainer"
                app:layout_constraintTop_toBottomOf="@+id/new_passwordContainer">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/et_conform_password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:textCursorDrawable="@drawable/color_cursor"
                    android:hint="@string/confirm_password"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:maxLength="16" />

            </com.google.android.material.textfield.TextInputLayout>

            <androidx.cardview.widget.CardView
                android:id="@+id/btn_change_password_submit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginVertical="50dp"
                android:backgroundTint="#008EFF"
                app:cardCornerRadius="20dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/conform_passwordContainer"
                app:layout_constraintTop_toBottomOf="@+id/conform_passwordContainer">

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:drawablePadding="10dp"
                        android:letterSpacing="0.04"
                        android:paddingHorizontal="28dp"
                        android:paddingVertical="8dp"
                        android:text="@string/btn_submit"
                        android:textColor="@color/white"
                        android:textSize="20sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent" />
                </androidx.constraintlayout.widget.ConstraintLayout>
            </androidx.cardview.widget.CardView>

</androidx.constraintlayout.widget.ConstraintLayout>